--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,14 @@ coverage
 coverage.json
 typechain
 typechain-types
+text.txt
+
 
 # Hardhat files
 cache
-artifacts
+artifacts/build-info
+artifacts/@openzeppelin
+artifacts/contracts/DegenToken.sol/DegenToken.dbg.json
+
+
 
