--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^3.0.0",
     "@openzeppelin/contracts": "^4.9.2",
+    "dotenv": "^16.3.1",
     "hardhat": "^2.16.1",
     "lite-server": "^2.6.1"
   }
